<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/linear_layout_style"
    tools:context="com.example.android.musicalstructureapp.Artists">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/coldplay_imageview"
            style="@style/album_image_style"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/img_coldplay" />

        <TextView
            android:id="@+id/coldplay_textview"
            style="@style/category_list_style"
            android:layout_toEndOf="@id/coldplay_imageview"
            android:layout_toRightOf="@id/coldplay_imageview"
            android:text="@string/coldplay_string" />

    </RelativeLayout>

    <View style="@style/divider_style" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/edsheeran_imageview"
            style="@style/album_image_style"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/img_edsheeran" />

        <TextView
            android:id="@+id/edsheeran_textview"
            style="@style/category_list_style"
            android:layout_toEndOf="@id/edsheeran_imageview"
            android:layout_toRightOf="@id/edsheeran_imageview"
            android:text="@string/edsheeran_string" />

    </RelativeLayout>

    <View style="@style/divider_style" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/jamesbay_imageview"
            style="@style/album_image_style"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/img_jamesbay" />

        <TextView
            android:id="@+id/jamesbay_textview"
            style="@style/category_list_style"
            android:layout_toEndOf="@id/jamesbay_imageview"
            android:layout_toRightOf="@id/jamesbay_imageview"
            android:text="@string/jamesbay_string" />

    </RelativeLayout>

    <View style="@style/divider_style" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/johnlegend_imageview"
            style="@style/album_image_style"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/img_johnlegend" />

        <TextView
            android:id="@+id/johnlegend_textview"
            style="@style/category_list_style"
            android:layout_toEndOf="@id/johnlegend_imageview"
            android:layout_toRightOf="@id/johnlegend_imageview"
            android:text="@string/johnlegend_string" />

    </RelativeLayout>

    <View style="@style/divider_style" />

    <TextView
        android:id="@+id/artists"
        style="@style/activty_headings_style"
        android:text="@string/artists_heading" />

    <TextView
        android:id="@+id/artists_activty_explanation_textview"
        style="@style/activty_explanations_style"
        android:text="@string/artists_activity_explanation" />

    <RelativeLayout style="@style/relative_layout_style">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#F5F5F5"
            android:orientation="horizontal">

            <Button
                android:id="@+id/artists_activity_main_btn"
                style="@style/menu_buttons_style"
                android:text="@string/main_string" />

            <Button
                android:id="@+id/artists_activity_art_btn"
                style="@style/menu_buttons_style"
                android:text="@string/art_string" />

            <Button
                android:id="@+id/artists_activity_artpage_btn"
                style="@style/menu_buttons_style"
                android:text="@string/artpage_string" />

            <Button
                android:id="@+id/artists_activity_nowplay_btn"
                style="@style/menu_buttons_style"
                android:text="@string/nowplay_string" />

            <Button
                android:id="@+id/artists_activity_pay_btn"
                style="@style/menu_buttons_style"
                android:text="@string/pay_string" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
